Updated Contact form

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SMTP_HOST=your_smtp_host
-SMTP_PORT=your_smtp_port
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
 SMTP_SECURE=true_or_false
-SMTP_USER=your_smtp_username
-SMTP_PASS=your_smtp_password
-RECIPIENT_EMAIL=recipient@example.com
+SMTP_USER=ddw.web.dev.services@gmail.com
+SMTP_PASS=cnlipzcyjqyqgxfd
+RECIPIENT_EMAIL=ddw.web.dev.services@gmail.com
